# personal-project

./: .env.example  .gitignore  payload.json  pyproject.toml
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
config/: settings.py  urls.py  urls.py.bak
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
users/: urls.py
